# todoing.txt

./: CMakeLists.txt  README.md  layout.sc
source/: todoing-txt-tui.c  todoing-txt.c  todoing-txt.h
source/todoing-tui/: day-window.c  day-window.h  timeline-window.c  timeline-window.h  todo-window.c  todo-window.h  todoing-nc-window.c  todoing-nc-window.h  todoing-txt-tui.c
